Fixes and Updates:
	- Added weights for multiple quests in Zereth Mortis.